# home_stack

./: .env  .gitignore  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  makefile  package-lock.json
.github/ISSUE_TEMPLATE/: privileged.yml
ai_stack/llamacpp/: Dockerfile  README.md  docker-compose.yml
ai_stack/ollama/: Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: models.py
backend/app/api/: main.py
backend/app/api/routes/: weather.py
backend/app/core/: config.py
backend/scripts/: llamacpp.sh
frontend/: .env  Dockerfile  README-WEATHER.md  diagnose-build.sh  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.cjs  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/client/: index.js  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/core/: ApiError.ts  OpenAPI.ts
frontend/src/client/services/: README.md  demo.ts  enhancedWeatherService.ts  itemsService.ts  loginService.ts  usersService.ts  weatherHub.ts  weatherService.ts  weatherUtils.ts
frontend/src/components/Common/: Navbar.tsx  SidebarItems.tsx
frontend/src/components/UserSettings/: Appearance.tsx
frontend/src/components/Weather/: WeatherDisplaySimple.tsx  WeatherErrorDisplay.tsx  WeatherForecast.tsx  WeatherForecastDisplay.tsx  WeatherLoadingAnimation.tsx  WeatherMap.tsx  leaflet-overrides.css
frontend/src/components/weather/: AirTemperature.tsx  FourDayOutlook.tsx  MapComponents.tsx  TwoHourForecast.tsx  WeatherMap.tsx  WeatherStatistics.tsx  WindDirection.tsx  leaflet-overrides.css  weatherUtils.ts
frontend/src/routes/: __root.tsx
frontend/src/routes/_layout/: admin.tsx  items.tsx  weather-hub.tsx  weather.tsx  weather.tsx.bak  weatherDashboard.tsx  weatherHub.tsx  weatherStats.tsx
frontend/src/utils/: weatherTypes.ts
notebooks/: Qwen2_5_Coder_(1_5B)_Tool_Calling.ipynb  Qwen3_(14B)_Reasoning_Conversational.ipynb  Qwen3_(4B)_GRPO.ipynb  llamacpp_example.ipynb  llamacpp_rag.ipynb  pyproject.toml  requirements.txt  test.ipynb  unsloth_nb.ipynb
notebooks/pydantic_ai/: fix_vector_dimensions.ipynb  ollama.ipynb  ollama_example.ipynb  pyproject.toml  question_graph.py  rag.py
notebooks/pydantic_ai/chat/: .chat_app_messages.sqlite  chat_app.py  chat_app.ts
notebooks/weather/: weather.py
scripts/: README-models.md  ai-launcher.sh  build-llamacpp.sh  llamacpp-gpu.sh  pull-deepseek-llamacpp.sh  pull-deepseek-model.sh  pull-model-simple.sh  toggle_nvidia.sh
