[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.7",
    "bitsandbytes>=0.46.0",
    "blake3>=1.0.5",
    "cachetools>=6.0.0",
    "chromadb>=0.6.3",
    "cloudpickle>=3.1.1",
    "compressed-tensors>=0.9.4",
    "depyf>=0.18.0",
    "einops>=0.8.1",
    "fastapi[standard]>=0.115.0",
    "filelock>=3.16.1",
    "gguf>=0.13.0",
    "huggingface-hub[hf-xet]>=0.32.0",
    "importlib-metadata>=8.6.1 ; python_full_version < '3.10'",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "lark>=1.2.2",
    "llama-cpp-python>=0.3.9",
    "llguidance>=0.7.11,<0.8.0 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "lm-format-enforcer>=0.10.11,<0.11",
    "mistral-common[opencv]>=1.5.4",
    "msgspec>=0.19.0",
    "ninja>=1.11.1.4",
    "numpy>=2.2.6",
    "openai>=1.52.0",
    "opencv-python-headless>=4.11.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-semantic-conventions-ai>=0.4.1",
    "outlines>=0.2.3",
    "partial-json-parser>=0.2.1.1.post5",
    "pillow>=11.2.1",
    "prometheus-client>=0.18.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "protobuf>=5.29.5",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.10",
    "pypdf>=5.6.0",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "pyzmq>=25.0.0",
    "regex>=2024.11.6",
    "requests>=2.26.0",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "setuptools>=77.0.3,<80 ; python_full_version >= '3.12'",
    "six>=1.16.0 ; python_full_version >= '3.12'",
    "termcolor>=3.1.0",
    "tiktoken>=0.6.0",
    "tokenizers>=0.21.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "typing-extensions>=4.10",
    "unsloth>=2024.8",
    "watchfiles>=1.0.5",
    "xformers>=0.0.30",
    "xgrammar>=0.1.19 ; platform_machine == 'aarch64' or platform_machine == 'x86_64'",
]

[tool.uv.workspace]
members = [
    "pydantic_ai",
]
