[project]
name = "pydantic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pip>=25.1.1",
    "pydantic-ai-slim[duckduckgo,mcp,openai]>=0.2.18",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "logfire[asyncpg,fastapi,sqlite3,httpx]>=2.6",
    "python-multipart>=0.0.17",
    "rich>=13.9.2",
    "uvicorn>=0.32.0",
    "devtools>=0.12.2",
    "gradio>=5.9.0; python_version>'3.9'",
    "mcp[cli]>=1.4.1; python_version >= '3.10'"
]
